Update url for user settings

--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -96,7 +96,7 @@ html(lang='en')
 							ul.dropdown-menu.right
 								li
 									a(
-										href="{{ url_for('users.settings_profile') }}"
+										href="{{ url_for('settings.profile') }}"
 										title="Settings")
 										i.pi-cog
 										| Settings
