User Space: Style listing

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -281,13 +281,7 @@ $item-thumbnail-size: 80px
     display: flex
     font-size: $font-size-small
 
-  &-share
-    color: $color-text-dark-primary
-    margin-left: auto
-    padding-left: 10px
-    padding-right: 10px
-
-    > a
+    a
       color: $color-text-dark-secondary
       display: inline-block
       padding: 10px 5px
@@ -295,17 +289,25 @@ $item-thumbnail-size: 80px
       &:hover
         color: $color-primary
 
+  &-share
+    margin-left: auto
+    padding-left: 10px
+    padding-right: 10px
+
   &-edit
+    padding-left: 10px
+
     a
-      padding: 15px
-      text-decoration: none
+      color: $color-primary
+
 
 #item-comments
   margin: 10px 15px
 
+
 /* Edit */
 body[data-context="post-edit"]
-  .item-edit
+  .item-action-edit
     display: none
 
 .item-edit
