Index: Click anywhere in the row to open item

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -12,6 +12,7 @@
     background-color: $color-background-lighter
     border-radius: 3px
     box-shadow: 1px 2px 2px $color-background-dark
+    cursor: pointer
     display: flex
     height: 100%
     margin: 8px 12px 8px 5px
