--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -105,8 +105,8 @@ script.
 
 	{% raw %}
 	var hitTemplate =
-		'<div class="list-hits-item" id="item-{{ objectID }}" data-id="{{ objectID }}" data-url="/p/{{ shortcode }}/{{ slug }}">' +
-			'<a href="/p/{{ shortcode }}/{{ slug }}" class="item-thumbnail js-item-open {{#picture}}has-thumbnail{{/picture}} {{#is_link}}is-link{{/is_link}}">' +
+		'<div class="list-hits-item js-item-open" id="item-{{ objectID }}" data-id="{{ objectID }}" data-url="/p/{{ shortcode }}/{{ slug }}">' +
+			'<a href="/p/{{ shortcode }}/{{ slug }}" class="item-thumbnail {{#picture}}has-thumbnail{{/picture}} {{#is_link}}is-link{{/is_link}}">' +
 				'<div class="item-thumbnail-picture">' +
 					'{{#picture}}' +
 						'<img src="{{picture}}"/>' +
@@ -126,21 +126,21 @@ script.
 					'</div>' +
 				'</div>' +
 				'<div class="item-details">' +
-					'<a href="/p/{{ shortcode }}/{{ slug }}" class="item-title js-item-open">{{ name }}</a>' +
+					'<a href="/p/{{ shortcode }}/{{ slug }}" class="item-title">{{ name }}</a>' +
 					'<ul>' +
 						'{{#is_link}}' +
 							'<li class="item-favicon">' +
-								'<a href="{{ link_url }}" target="_blank">' +
+								'<a class="follow-link" href="{{ link_url }}" target="_blank">' +
 									'<img title="Link" src="http://www.google.com/s2/favicons?domain={{ link_url }}"/>' +
 								'</a>' +
 							'</li>' +
 						'{{/is_link}}' +
 						'<li>{{ category }}</li>' +
-						'<li class="item-date js-item-open"><a href="">{{ created }}</a></li>' +
-						'<li class="item-author"><a href="/u/{{ user.username }}">{{ user.full_name }}</a></li>' +
-						'<li class="item-comments"><a href="{{ link_url }}">{{ comments_count }} <i class="pi-comment"></i></a></li>' +
+						'<li class="item-date">{{ created }}</li>' +
+						'<li class="item-author"><a class="follow-link" href="/u/{{ user.username }}">{{ user.full_name }}</a></li>' +
+						'<li class="item-comments">{{ comments_count }} <i class="pi-comment"></i></li>' +
 						'{{#is_link}}' +
-							'<li class="item-link"><a href="{{ link_url }}" target="_blank">{{ link_short }}</a></li>' +
+							'<li class="item-link"><a class="follow-link" href="{{ link_url }}" target="_blank">{{ link_short }}</a></li>' +
 						'{{/is_link}}' +
 					'</ul>' +
 				'</div>' +
