--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -36,7 +36,7 @@ html(lang='en')
 					input(
 						id="q",
 						type="text",
-						placeholder="Search...")
+						placeholder="{{ _('Search...') }}")
 
 				#list-categories.wgt-dropdown-toggle
 				#list-refined-values
@@ -51,9 +51,9 @@ html(lang='en')
 							.btn-group
 								button.btn.btn-submit.wgt-toggle-submit(
 								data-action="publish",
-								title="Submit a Link")
+								title="{{ _('Submit a Link') }}")
 									i.pi-link
-									| Submit Link
+									| {{ _('Submit Link') }}
 
 								button.btn.btn-submit.wgt-dropdown-toggle
 									i.pi-angle-down
@@ -64,7 +64,7 @@ html(lang='en')
 												href="{{ url_for('posts.create', post_type='text') }}",
 												title="Submit a Text post")
 												i.pi-document-text
-												|  Submit Text
+												|  {{ _('Submit Text') }}
 
 						li.nav-notifications
 							a.navbar-item#notifications-toggle(
@@ -82,7 +82,7 @@ html(lang='en')
 									a#notifications-markallread(
 										title="Mark All as Read",
 										href="/notifications/read-all")
-										| Mark All as Read
+										| {{ _('Mark All as Read') }}
 
 						li.dropdown.wgt-dropdown-toggle
 							.dropdown-toggle
@@ -99,12 +99,12 @@ html(lang='en')
 										href="{{ url_for('settings.profile') }}"
 										title="Settings")
 										i.pi-cog
-										| Settings
+										| {{ _("Settings") }}
 								li
 									a(
 										href="{{ url_for('users.logout') }}")
 										i.pi-log-out(title="Log Out")
-										| Log out
+										| {{ _("Log out") }}
 
 						| {% else %}
 						li
@@ -112,9 +112,9 @@ html(lang='en')
 								a.btn.btn-submit(
 									href="{{ url_for('users.login') }}",
 									data-action="publish",
-									title="Submit a Link")
+									title="{{ _('Submit a Link')}}")
 									i.pi-link
-									| Submit Link
+									| {{ _('Submit Link') }}
 
 								button.btn.btn-submit.wgt-dropdown-toggle
 									i.pi-angle-down
@@ -125,11 +125,11 @@ html(lang='en')
 												href="{{ url_for('users.login') }}",
 												title="Submit a Text post")
 												i.pi-document-text
-												|  Submit Text
+												| {{ _('Submit Text') }}
 
 						li
 							a.navbar-item.login(href="{{ url_for('users.login') }}")
-								| Log in
+								| {{ _('Log in') }}
 						| {% endif %}
 
 		#app-main
