--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -153,7 +153,9 @@ html(lang='en')
 		script(src="{{ url_for('static_pillar', filename='assets/js/tutti.min.js', v=171120161) }}")
 		script(src="{{ url_for('static_pillar', filename='assets/js/markdown.min.js', v=171120161) }}")
 		script(src="{{ url_for('static_dillo', filename='js/generated/tutti.min.js', v=171120161) }}")
-		script(src="{{ url_for('static_dillo', filename='js/vendor/moment-2.18.1.min.js', v=171120161) }}")
+		script(src="{{ url_for('static_dillo', filename='js/vendor/moment-2.18.1-with-locales.min.js', v=171120161) }}")
+		script.
+			moment.locale("{{ g.get('locale', 'en_US') }}");
 		script(src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.2.3")
 		script(src='https://cdn.jsdelivr.net/instantsearch.js/1/instantsearch.min.js')
 
