URL field should be type url

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -16,7 +16,7 @@
 					input(
 					disabled,
 					name="content",
-					type="text",
+					type="url",
 					class="input-field",
 					placeholder="Paste or type the URL here",
 					value="{{ node.properties.content }}")
