Description textarea minlength set to 5

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -39,6 +39,7 @@
 					disabled,
 					name="content",
 					class="input-field",
+					minlength="5",
 					placeholder="Witty post description")
 						| {{ node.properties.content }}
 
