--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -62,6 +62,7 @@
 
 				| {{ form.csrf_token }}
 				| {{ form.status }}
+
 				select(
 				id="post_type",
 				class="post_type",
@@ -99,7 +100,7 @@
 				| {% if node.properties.status == 'published' %}
 				a.btn.cancel(href="{{ url_for('posts.view', post_shortcode=node.properties.shortcode)}}") Cancel
 				| {% else %}
-				a.btn.cancel(href="{{ url_for('posts.index')}}") Cancel
+				a.btn.cancel.js-cancel-submit(href="{{ url_for('posts.index')}}") Cancel
 				| {% endif %}
 
 				| {% if node.properties.status != 'pending' %}
@@ -147,16 +148,31 @@ script.
 	// Run on page load
 	$(function () {
 
-		// Load the content (in the sidebar) for the first time
-		$.get("{{ url_for('nodes.view', node_id=node._id) }}", function (dataHtml) {
-			$('#col_right').html(dataHtml);
-			loadComments("{{ url_for('nodes.comments_for_node', node_id=node._id) }}");
-		});
+		// If we are using quick submit
+		if (ProjectUtils.context() == 'post-submit-overlay'){
 
-		// Enable the proper fields
+			// Pressing 'cancel' should just hide the dialog
+			$(document).on('click', 'body .js-cancel-submit', function(e){
+				e.preventDefault();
+				exitSubmit();
+			});
+
+		} else {
+			// If we are not in quick submit, means we are posting a text post or editing an existing item
+
+			// Load the post view_embed on the side
+			$.get("{{ url_for('nodes.view', node_id=node._id) }}", function (dataHtml) {
+				$('#col_right').html(dataHtml);
+
+				loadComments("{{ url_for('nodes.comments_for_node', node_id=node._id) }}");
+			});
+		}
+
+		// Enable the proper fields on load
 		var input_content = $('.input-content.' + '{{ node.properties.post_type }}' + ' .input-field');
 		input_content
 			.prop('disabled', false)
+			.prop('required', true)
 			.attr('id', 'content');
 
 
@@ -168,6 +184,7 @@ script.
 		var $image_oembed = $('.item-oembed-images ul');
 		var $statusLoad = $('#status');
 		var statusLoad_val = $statusLoad.val();
+
 
 		// Resize textarea when typing long text
 		$item_content_input
@@ -287,7 +304,7 @@ script.
 		});
 
 
-		// Save Workflow
+		// Save workflow
 		var $item_save_publish_button = $(".item-save-publish");
 		$item_save_publish_button.unbind("click");
 
