Post View: Don't display empty link if it's not defined

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -521,7 +521,7 @@ body[data-context="post-edit"]
       align-items: center
       overflow: hidden
 
-      a.item-link-data
+      .item-link-data
         font-size: $font-size-small
         line-height: $font-size
         padding: 15px
