Localization: More strings marked for extraction
Note: Poedit seems to have some troubles with the "| " prefix of pug
files. Also they mess up strings extraction. So I give up on adding
@BlenderToday as part of the string here.

--- a/src/templates/errors/404_embed.pug
+++ b/src/templates/errors/404_embed.pug
@@ -4,7 +4,8 @@
 
 	.error-info
 		.error-info-title
-			| 404 Not Found
+			| 404 {{ _('Not Found') }}
 
 		.error-info-content
-			| Something wrong? Let us know on Twitter <a href="https://twitter.com/Blender_Cloud">@BlenderToday</a>
+			| {{ _('Something wrong? Let us know on Twitter') }}
+			| <a href="https://twitter.com/Blender_Cloud">@BlenderToday</a>
