--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -138,7 +138,7 @@ html(lang='en')
 		#app-overlay
 			.overlay-background
 			.dialog-box
-				| Are you logged in?
+				| {{ _('Are you logged in?') }}
 
 		#notification-pop(data-url="", data-read-toggle="")
 			.nc-progress
@@ -146,7 +146,7 @@ html(lang='en')
 				i.pi-cancel
 			.nc-item
 				.nc-text
-					| No Notifications
+					| {{ _('No Notifications') }}
 
 
 		script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery-3.1.0.min.js', v=171120161)}}")
