Wider post view for large screens

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -43,9 +43,13 @@ a:hover
             margin-top: 15px
 
 #col_main
+  +media-lg
+    width: 45%
   background-color: $color-background-dark
 
 #col_right
+  +media-lg
+    width: 65%
   background-color: $color-background-lighter
   transition: width 250ms ease-in-out
 
