Include user time data

--- a/src/templates/dillo/user.pug
+++ b/src/templates/dillo/user.pug
@@ -5,6 +5,7 @@
 
 // {{ user.full_name }}
 // {{ user.extension_props.dillo.karma.positive - user.extension_props.dillo.karma.negative }}
+// {{ _('Last seen') }} {{ user._updated }} - {{ _('Joined') }} {{ user._created }}
 
 #col_main.listing-list
 	#list-hits
