User karma: post rating and `manage.py dillo reset_users_karma`
Dear team, you can now run the above command and your users will be
properly set. (even after the database migration by the way ;).

--- a/src/templates/dillo/user.pug
+++ b/src/templates/dillo/user.pug
@@ -4,7 +4,7 @@
 | {% block body %}
 
 // {{ user.full_name }}
-// {{ user.extension_props.dillo.karma.positive - user.extension_props.dillo.karma.negative }}
+// Karma: {{ user.extension_props.dillo.karma }}
 // {{ _('Last seen') }} {{ user._updated }} - {{ _('Joined') }} {{ user._created }}
 
 #col_main.listing-list
