--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -50,7 +50,7 @@ a:hover
 #col_right
   +media-lg
     width: 65%
-  background-color: $color-background-lighter
+  background-color: $color-background-dark
   transition: width 250ms ease-in-out
 
 #app-header
@@ -146,18 +146,6 @@ a:hover
 
     .item-edit-header
       padding: 10px 20px 20px
-
-#header-bar
-  &-pri
-    background-color: $color-background-lighter
-    box-shadow: inset 0 -1px $color-background-dark
-    display: flex
-    align-items: center
-    width: 100%
-    height: $header-bar-pri-size
-
-    &-user
-      margin-left: auto
 
 .app-branding
   color: $color-primary
@@ -322,12 +310,28 @@ ul.dropdown-menu
     display: flex
     visibility: visible
 
-.wgt-search input
-  padding: 7px 10px
-  border: none
-  border-radius: 3px
-  box-shadow: inset 0 0 0 1px $color-background-dark
-  width: 120px
+.wgt-search
+  position: relative
+
+  .wgt-search-icon
+    position: absolute
+    right: 15px
+    top: 6px
+    color: $color-text-dark-primary
+
+  input
+    background-color: rgba($color-background, .8)
+    padding: 6px 10px
+    border: none
+    border-radius: 3px
+    box-shadow: none
+    width: auto
+    float: right
+    margin: 0 10px
+
+    &::placeholder
+      color: $color-text-dark-primary
+
 
 .emoji
   height: 16px
@@ -359,6 +363,70 @@ h1 .emoji
 
 .flyout.notifications
   top: 40px
+
+
+.d-header
+  background-color: $color-background-lighter
+  box-shadow: 0 1px 3px rgba(black, .1)
+  display: flex
+  padding: 0 10px
+  position: relative
+  z-index: 2
+
+  &-background
+    background-color: $color-background-dark
+    background-size: cover
+    height: 100%
+    left: 0
+    position: absolute
+    right: 0
+    top: 0
+    width: 100%
+    z-index: -1
+
+  $header-logo-size: 60px
+  &-logo
+    align-items: center
+    border-radius: 3px
+    display: flex
+    justify-content: center
+    height: $header-logo-size
+    position: relative
+    width: $header-logo-size
+
+    img
+      +position-center-translate
+      margin: 0 5px
+      max-width: 100%
+
+  &-title
+    display: flex
+    flex-direction: column
+    justify-content: center
+    padding-left: 25px
+
+    .title
+      font-size: $font-size-large
+      text-decoration: none
+
+    .summary
+      cursor: default
+      display: inline-block
+      font-size: $font-size-small
+      left: -2px
+      margin-top: 10px
+      position: relative
+
+    .title span,
+    .summary span
+      +text-background($color-text-dark, $color-background-lighter, 0, 3px 0)
+
+  &-action
+    align-items: center
+    justify-content: center
+    display: flex
+    flex-direction: column
+    margin-left: auto
 
 /* General style for activities in all places */
 .d-activity
