--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -494,6 +494,11 @@ body[data-context="post-edit"]
 
 // Specific tweaks to item view embed when link or text
 .item-view
+  margin: 9px 10px 5px
+  background-color: $color-background-lighter
+  border-radius: 3px
+  box-shadow: 1px 2px 2px $color-background-dark
+
   &-header
     display: flex
     border-bottom: thin solid $color-background-dark
