--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -102,7 +102,8 @@ script.
 
 	search.addWidget(
 		instantsearch.widgets.searchBox({
-			container: '#q'
+			container: '#q',
+			autofocus: false
 		})
 	);
 
