Fix fonts not loading properly
Dillo's config was coming after the base styling from Pillar

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,8 +1,10 @@
+// First load Pillar's config as fallback, then Dillo's
 @import ../../../pillar/src/styles/_config
+@import _config
+
 @import ../../../pillar/src/styles/_utils
 @import ../../../pillar/src/styles/base
 
-@import _config
 @import _base
 @import _item
 @import _list
