Style tweaks on comments

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -335,10 +335,6 @@ $item-thumbnail-size: 80px
       color: $color-primary
 
 
-#item-comments
-  margin: 10px 15px
-
-
 /* Edit */
 body[data-context="post-edit"]
   .item-info-edit
@@ -552,3 +548,12 @@ body[data-context="post-edit"]
 
     .item-details > ul li i
       margin-right: 10px
+
+
+  .comments-container
+    .comments-list-title
+      padding: 10px 25px
+
+    .comment-container,
+    .comment-reply-container
+      padding: 10px 25px
