--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -513,7 +513,6 @@ body[data-context="post-edit"]
   &.link
     .item-body
       align-items: center
-      background-color: $color-background
       display: flex
 
       .item-link-data
@@ -532,8 +531,9 @@ body[data-context="post-edit"]
 
       img.favicon
         height: 16px
+        margin-left: 8px
+        margin-right: 24px
         position: relative
-        margin-right: 10px
         top: 3px
         width: 16px
 
